--- a/Web/css/welcome.css
+++ b/Web/css/welcome.css
@@ -39,7 +39,7 @@
 	float: left;
 	text-align: left;
   margin: 0 -960px -50px 520px;
-	width: 385px;
+	width: 405px;
   height: 45px;
 	background: #313131;
 	background-image: -moz-linear-gradient(#313131, #5e5b5b);
@@ -78,7 +78,7 @@
 .welcome .user-login .login-form{
   padding-top: 3px;
 	margin: 0 auto;
-	width: 365px;
+	width: 385px;
 }
 .welcome .user-login input{
 	color: #787474;
